# webkitchen-cli

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
webkitchen/: cli.py
webkitchen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
webkitchen/webkitchen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
webkitchen/wk_server/: auth.py  server.py
