[project]
name = "webkitchen"
version = "0.1.3"
description = "A CLI tool to manage, collaborate, and deploy web projects easily"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Udit N. Khare" },
    { name = "Rama Khare" },
    { name = "Swara Verma" },
    { name = "Apoorv Verma" }
    
    
]

dependencies = [
    "typer",
    "requests"
]

keywords = ["cli", "web", "deployment", "developer-tools", "automation"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]


[project.scripts]
wk = "webkitchen.cli:app"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"